package net.thechunk.playpen.protocol;

option java_outer_classname = "Protocol";

message AuthenticatedMessage {
    required string uuid = 1;
    required string hash = 2;
    required string transaction = 3;
    required bytes payload = 4;
}